--- a/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.html
+++ b/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.html
@@ -20,15 +20,15 @@
             </div>
             <div class="checkbox-indigators d-flex align-items-center">
               <div class="cb_indigator cd_red">
-                <input type="checkbox" id="indigatorRed" checked>
+                <input type="checkbox" id="indigatorRed" (click)="onSelectCheckbox($event)" [checked]="statusSearchData[0]">
                 <label for="indigatorRed"></label>
               </div>
               <div class="cb_indigator cb_warning">
-                <input type="checkbox" id="indigatorWarning">
+                <input type="checkbox" id="indigatorWarning" (click)="onSelectCheckbox($event)" [checked]="statusSearchData[1]">
                 <label for="indigatorWarning"></label>
               </div>
               <div class="cb_indigator cb_success">
-                <input type="checkbox" id="indigatorSuccess">
+                <input type="checkbox" id="indigatorSuccess" (click)="onSelectCheckbox($event)" [checked]="statusSearchData[2]">
                 <label for="indigatorSuccess"></label>
               </div>
             </div>
@@ -47,13 +47,13 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor = "let apmMetric of APMMetricData | filter:searchData; let i=index;" class="{{metricSelectedRow === i && metricType === 'APM' ? 'selected-row' : ''}}" (click)="onClickAPMRow(i,$event,null)">
+                <tr *ngFor = "let apmMetric of APMMetricData | filter:searchData; let i=index;" class="{{selectedMetricName === apmMetric.name && metricType === 'APM' ? 'selected-row' : ''}}" (click)="onClickAPMRow(i,$event,null,apmMetric.name)">
                   <td>{{apmMetric.name}}</td>
                   <td><span class="countBox {{assignProperColor(apmMetric.groupScore)}}" id="Score">{{apmMetric.groupScore}}</span></td>
-                  <td class="text-center {{AvgerageScore(i,'Latency')}}"><i id="Latency" class="fa fa-square matricstatusicon {{metricSelectedRow === i && apmMetricSelectedType === 'Latency' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
-                  <td class="text-center {{AvgerageScore(i,'Error')}}"><i id="Error" class="fa fa-square matricstatusicon {{metricSelectedRow === i && apmMetricSelectedType === 'Error' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
-                  <td class="text-center {{AvgerageScore(i,'Throughput')}}"><i id="Throughput" class="fa fa-square matricstatusicon {{metricSelectedRow === i && apmMetricSelectedType === 'Throughput' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
-                  <td class="text-center {{AvgerageScore(i,'Apdex')}}"><i id="Apdex" class="fa fa-square matricstatusicon {{metricSelectedRow === i && apmMetricSelectedType === 'Apdex' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Latency')}}"><i id="Latency" class="fa fa-square matricstatusicon {{selectedMetricName === apmMetric.name && apmMetricSelectedType === 'Latency' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Error')}}"><i id="Error" class="fa fa-square matricstatusicon {{selectedMetricName === apmMetric.name && apmMetricSelectedType === 'Error' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Throughput')}}"><i id="Throughput" class="fa fa-square matricstatusicon {{selectedMetricName === apmMetric.name && apmMetricSelectedType === 'Throughput' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Apdex')}}"><i id="Apdex" class="fa fa-square matricstatusicon {{selectedMetricName === apmMetric.name && apmMetricSelectedType === 'Apdex' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
                 </tr>
               </tbody>
             </table>
@@ -86,7 +86,7 @@
                             [searchData]="searchData" 
                             [selectedType]="metricType" 
                             [selectedRow]="metricSelectedRow"
-                            [selectedMetricName]="childSelectedMetric" 
+                            [selectedMetricName]="selectedMetricName" 
                             [thresholdScore]="thresholdScore"
                             (selectedElement)="recivedChildData($event)">
                           </app-child-table>
@@ -126,7 +126,7 @@
                             [searchData]="searchData" 
                             [selectedType]="metricType" 
                             [selectedRow]="metricSelectedRow"
-                            [selectedMetricName]="childSelectedMetric" 
+                            [selectedMetricName]="selectedMetricName" 
                             [thresholdScore]="thresholdScore"
                             (selectedElement)="recivedChildData($event)">
                           </app-child-table>
@@ -147,7 +147,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text" id="modal-search"><i class="fa fa-search"></i></span>
               </div>
-              <input type="text" class="form-control" placeholder="Search" [(ngModel)]="searchData">
+              <input type="text" class="form-control" placeholder="Search" [(ngModel)]="searchData" (change)="onSearch()">
             </div>
             <div class="field col-4">
               <select class="form-control">
@@ -158,15 +158,15 @@
             </div>
             <div class="checkbox-indigators d-flex align-items-center">
               <div class="cb_indigator cd_red">
-                <input type="checkbox" id="indigatorRed" checked>
+                <input type="checkbox" id="indigatorRed" (click)="onSelectCheckbox($event)" [checked]="statusSearchData[0]">
                 <label for="indigatorRed"></label>
               </div>
               <div class="cb_indigator cb_warning">
-                <input type="checkbox" id="indigatorWarning">
+                <input type="checkbox" id="indigatorWarning" (click)="onSelectCheckbox($event)" [checked]="statusSearchData[1]">
                 <label for="indigatorWarning"></label>
               </div>
               <div class="cb_indigator cb_success">
-                <input type="checkbox" id="indigatorSuccess">
+                <input type="checkbox" id="indigatorSuccess" (click)="onSelectCheckbox($event)" [checked]="statusSearchData[2]">
                 <label for="indigatorSuccess"></label>
               </div>
             </div>
@@ -185,13 +185,13 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor = "let apmMetric of APMMetricData | filter:searchData; let i=index;" class="{{metricSelectedRow === i && metricType === 'APM' ? 'selected-row' : ''}}" (click)="onClickAPMRow(i,$event,null)">
+                <tr *ngFor = "let apmMetric of APMMetricData | filter:searchData; let i=index;" class="{{selectedMetricName === apmMetric.name && metricType === 'APM' ? 'selected-row' : ''}}" (click)="onClickAPMRow(i,$event,null,apmMetric.name)">
                   <td>{{apmMetric.name}}</td>
                   <td><span class="countBox {{assignProperColor(apmMetric.groupScore)}}" id="Score">{{apmMetric.groupScore}}</span></td>
-                  <td class="text-center {{AvgerageScore(i,'Latency')}}"><i id="Latency" class="fa fa-square matricstatusicon {{metricSelectedRow === i && apmMetricSelectedType === 'Latency' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
-                  <td class="text-center {{AvgerageScore(i,'Error')}}"><i id="Error" class="fa fa-square matricstatusicon {{metricSelectedRow === i && apmMetricSelectedType === 'Error' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
-                  <td class="text-center {{AvgerageScore(i,'Throughput')}}"><i id="Throughput" class="fa fa-square matricstatusicon {{metricSelectedRow === i && apmMetricSelectedType === 'Throughput' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
-                  <td class="text-center {{AvgerageScore(i,'Apdex')}}"><i id="Apdex" class="fa fa-square matricstatusicon {{metricSelectedRow === i && apmMetricSelectedType === 'Apdex' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Latency')}}"><i id="Latency" class="fa fa-square matricstatusicon {{selectedMetricName === apmMetric.name && apmMetricSelectedType === 'Latency' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Error')}}"><i id="Error" class="fa fa-square matricstatusicon {{selectedMetricName === apmMetric.name && apmMetricSelectedType === 'Error' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Throughput')}}"><i id="Throughput" class="fa fa-square matricstatusicon {{selectedMetricName === apmMetric.name && apmMetricSelectedType === 'Throughput' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Apdex')}}"><i id="Apdex" class="fa fa-square matricstatusicon {{selectedMetricName === apmMetric.name && apmMetricSelectedType === 'Apdex' && metricType === 'APM' ? 'activeBtn' : ''}}" aria-hidden="true"></i></td>
                 </tr>
               </tbody>
             </table>
@@ -224,7 +224,7 @@
                             [searchData]="searchData" 
                             [selectedType]="metricType" 
                             [selectedRow]="metricSelectedRow"
-                            [selectedMetricName]="childSelectedMetric" 
+                            [selectedMetricName]="selectedMetricName" 
                             [thresholdScore]="thresholdScore"
                             (selectedElement)="recivedChildData($event)">
                           </app-child-table>
@@ -264,7 +264,7 @@
                             [searchData]="searchData" 
                             [selectedType]="metricType" 
                             [selectedRow]="metricSelectedRow"
-                            [selectedMetricName]="childSelectedMetric" 
+                            [selectedMetricName]="selectedMetricName" 
                             [thresholdScore]="thresholdScore"
                             (selectedElement)="recivedChildData($event)">
                           </app-child-table>
@@ -304,13 +304,13 @@
                   <b class="countDisabledbtn">{{metricType === 'Infrastructure'?'INFRA' : metricType==='ADVANCED' ? 'ADVANCED' : 'UNKNOWN'}} METRIC : </b> 
                   <b>{{this.parentMetricName | uppercase}}</b>
                 </p>
-                <p class="mb-1"><b class="countDisabledbtn">COMPARISON : </b> <b class="{{typeColor + 'btn'}}">{{childSelectedMetric | uppercase}}</b></p>
+                <p class="mb-1"><b class="countDisabledbtn">COMPARISON : </b> <b class="{{typeColor + 'btn'}}">{{selectedMetricName | uppercase}}</b></p>
                 <div class="graph mb-3" *ngFor = "let chart of currentChartData ; let i = index;" #subChartSize>
                   <hr>
                   <i class="fa fa-line-chart" aria-hidden="true"></i>
                   <app-line-chart [dataSource]="chart" [chartProperty]="lineChartProperty" [view]="chartSize"></app-line-chart>
                 </div>
-                <p class="mb-1"><b class="countDisabledbtn">QUARTILE COMPARISON : </b> <b class="{{typeColor + 'btn'}}">{{childSelectedMetric | uppercase}}</b></p>
+                <p class="mb-1"><b class="countDisabledbtn">QUARTILE COMPARISON : </b> <b class="{{typeColor + 'btn'}}">{{selectedMetricName | uppercase}}</b></p>
                 <div class="graph mb-4">
                   <img src="../../../../assets/images/matric_graph02.jpg" class="img-fluid" alt="image" />
                 </div>
@@ -326,7 +326,7 @@
                 </div>
                 <div class="card">
                   <div class="card-header text-uppercase">
-                    {{childSelectedMetric}}
+                    {{selectedMetricName}}
                   </div>
                   <div class="table-responsive">
                     <table class="table mb-0">
