--- a/src/app/application/deployment-verification/metric-analysis/child-table/child-table.component.html
+++ b/src/app/application/deployment-verification/metric-analysis/child-table/child-table.component.html
@@ -10,14 +10,14 @@
       </tr>
     </thead>
     <tbody>
-        <tr class="{{selectedType === childData.category && selectedMetricName === metridata.metricName ? 'selected-row' : ''}}" 
+        <tr class="{{selectedType === childData.category && selectedMetricName === metridata.metricName && selectedRow === i ? 'selected-row' : ''}}" 
           *ngFor = "let metridata of childData.metricList | filter:searchData; let i=index" id="{{childData.category}}" 
           (click)="onSelectRow(i,$event,metridata.metricName)">
           <td class="cell-heading">{{metridata.metricName}}</td>
           <td class="text-center"><span class="countBox {{assignProperColor(metridata.metricScore)}}">{{metridata.metricScore}}</span></td>
-          <td class="text-center">N/A</td>
-          <td class="text-center">N/A</td>
-          <td class="text-center">N/A</td>
+          <td class="text-center">{{metridata.relevance}}</td>
+          <td class="text-center"><i *ngIf="metridata.critical" class="fa fa-check" aria-hidden="true"></i><span *ngIf="!metridata.critical"><b>-</b></span></td>
+          <td class="text-center"><i *ngIf="metridata.watchlist" class="fa fa-check" aria-hidden="true"></i><span *ngIf="!metridata.watchlist"><b>-</b></span></td>
           <td class="text-center">N/A</td>
         </tr>
     </tbody>
