--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -1,16 +1,5 @@
 <div class="graph_area">
   <div class="d-flex px-3 align-items-center mb-2">
-    <ul class="nav nav-tabs nav-tabs-btns p-0" id="myTab" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" id="graph01-tab" data-toggle="tab" href="#graph01" role="tab" aria-controls="graph01"
-          aria-selected="true"><img src="../../../assets/images/chart_line.png" alt=""></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="graph02-tab" data-toggle="tab" href="#graph02" role="tab" aria-controls="graph02"
-          aria-selected="false"><img src="../../../assets/images/bar_lines.png" alt=""></a>
-      </li>
-    </ul>
-
     <div class="ml-auto d-flex">
       <div class="risk d-flex align-items-center">
         <span class="diamond">
@@ -24,26 +13,12 @@
             <b *ngIf="logAnalysisResults?.sensitivity == 'low'" class="d-block {{logSensitivityScores[0]?.low?.textclass}}" >{{logSensitivityScores[0]?.low?.risk}}</b>            
             Precieved Risk
           </span>
-      </div>
-      <!-- /.risk -->
-      <div class="dropdown ml-3">
-        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Low
-        </button>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Low</a>
-          <a class="dropdown-item" href="#">High</a>
-          <a class="dropdown-item" href="#">Medium</a>
-        </div>
-      </div>
-      <!-- <span id="sensitivityDropdown">{{logAnalysisResults?.sensitivity}}</span>
-      <select class="form-control" formControlName="sensitivityLevel" (change)="changeSensitivity($event)" >           
-          <option value="">Select Type</option>
-          <option *ngFor="let sensitivity of sensitivityLevels" value="{{sensitivity}}">{{sensitivity}}
-          </option>
-        </select> -->
-      <button class="btn ml-3 btn-primary">Reclassify</button>
+      </div>      
+      <select (change)="changeSensitivity($event)" [(ngModel)]="selectedSensitivity" class="form-control"> 
+        <option *ngFor='let sensitivity of sensitivityLevels' [value]="sensitivity">
+          {{sensitivity}}
+        </option>
+      </select>      
     </div>
     <!-- /.ml-auto -->
   </div>
@@ -123,7 +98,9 @@
 
         <div class="card mb-2" *ngFor="let log of logAnalysisData?.clusters">
           <div class="card-header d-flex align-items-center justify-content-between" id="heading01">
-            <div class="score">Impact On Score {{log.scoreReduction?.high}}</div>
+            <div class="score" *ngIf="selectedSensitivity=='high'">Impact On Score {{log.scoreReduction?.high}}</div>
+            <div class="score" *ngIf="selectedSensitivity=='medium'">Impact On Score {{log.scoreReduction?.medium}}</div>
+            <div class="score" *ngIf="selectedSensitivity=='low'">Impact On Score {{log.scoreReduction?.low}}</div>
             <div class="times"><b>{{log.v1Len}}</b>Baseline</div>
             <div class="times"><b>{{log.v2Len}}</b>New Release</div>
             <!-- <div class="error_graph"><img src="../../../assets/images/graph_lines_01.png" class="img-fluid"
