--- a/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.less
+++ b/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.less
@@ -41,8 +41,11 @@ td{
   }
 }
 .scorebox{
-  width: 85px;
+  width: 60px;
 }
 .tableRowCustom{
   border-bottom: 1px solid #dee2e6 !important;
+}
+.customtd{
+  width: 75px;
 }
