--- a/src/app/application/deployment-verification/metric-analysis/child-table/child-table.component.html
+++ b/src/app/application/deployment-verification/metric-analysis/child-table/child-table.component.html
@@ -2,11 +2,11 @@
     <thead>
       <tr>
         <th>{{childData.name}}</th>
-        <th class="text-center">SCORE </th>
+        <th class="text-center scorebox">SCORE </th>
         <th class="text-center">RANK</th>
-        <th class="text-center scorebox">CRITICAL</th>
-        <th class="text-center scorebox">WATCHLIST</th>
-        <th class="text-center scorebox">INTERVALS</th>
+        <th class="text-center">CRITICAL</th>
+        <th class="text-center">WATCHLIST</th>
+        <th class="text-center">INTERVALS</th>
       </tr>
     </thead>
     <tbody>
@@ -14,11 +14,15 @@
           *ngFor = "let metridata of childData.metricList | filter:searchData; let i=index" id="{{childData.category}}" 
           (click)="onSelectRow(i,$event,metridata.metricName)">
           <td class="cell-heading">{{metridata.metricName}}</td>
-          <td class="text-center"><span class="countBox {{assignProperColor(metridata.metricScore)}}">{{metridata.metricScore}}</span></td>
-          <td class="text-center">{{metridata.relevance}}</td>
-          <td class="text-center"><i *ngIf="metridata.critical" class="fa fa-check" aria-hidden="true"></i><span *ngIf="!metridata.critical"><b>-</b></span></td>
-          <td class="text-center"><i *ngIf="metridata.watchlist" class="fa fa-check" aria-hidden="true"></i><span *ngIf="!metridata.watchlist"><b>-</b></span></td>
-          <td class="text-center">N/A</td>
+          <td class="text-center"><span class="countBox {{assignProperColor(metridata.metricScore)}} scorebox">{{metridata.metricScore}}</span></td>
+          <td class="text-center customtd">{{metridata.relevance}}</td>
+          <td class="text-center customtd"><i *ngIf="metridata.critical" class="fa fa-check" aria-hidden="true"></i><span *ngIf="!metridata.critical">-</span></td>
+          <td class="text-center customtd"><i *ngIf="metridata.watchlist" class="fa fa-check" aria-hidden="true"></i><span *ngIf="!metridata.watchlist">-</span></td>
+          <td class="text-center customtd">
+            <ng-container *ngFor="let interval of intervalCount(metridata.bucketscores);let j=index">
+              <span class="countBox {{assignProperColor(interval)}} scorebox" data-toggle="tooltip" data-placement="top" title="Interval {{j+1}}">{{interval}}</span>
+            </ng-container>
+          </td>
         </tr>
     </tbody>
 </table>
