--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -76,19 +76,19 @@
 
 <div class="tab-default pt-3">
   <ul class="nav nav-tabs" id="myTabDefault" role="tablist">
-    <li class="nav-item" (click)="getLogAnalysis()">
+    <li class="nav-item" (click)="getLogAnalysis()" data-toggle="tooltip" title="Errors and warnings appearing only in Release version and the common Errors/Warnings that occur more often in Release version as compared to Baseline.">
       <a class="nav-link active" id="{{eventTabLabeledBy}}" data-toggle="tab" href="#unexpected" role="tab" aria-controls="unexpected" aria-selected="true">Unexpected</a>
     </li>
-    <li class="nav-item" (click)="onClickLogEventTab('expected')">
+    <li class="nav-item" (click)="onClickLogEventTab('expected')" data-toggle="tooltip" title="The Info/Debug events common to both Baseline & Release and the Errors/Warnings that occur less often in Release version as compared to Baseline.">
       <a class="nav-link" id="{{eventTabLabeledBy}}" data-toggle="tab" href="#expected" role="tab" aria-controls="expected" aria-selected="false">Expected</a>
     </li>
-    <li class="nav-item" (click)="onClickLogEventTab('baseline')">
+    <li class="nav-item" (click)="onClickLogEventTab('baseline')" data-toggle="tooltip" title="The Info/Debug events that are unique to Baseline.">
       <a class="nav-link" id="{{eventTabLabeledBy}}" data-toggle="tab" href="#baseline" role="tab" aria-controls="baseline" aria-selected="false">Baseline</a>
     </li>
-    <li class="nav-item" (click)="onClickLogEventTab('ignored')">
+    <li class="nav-item" (click)="onClickLogEventTab('ignored')" data-toggle="tooltip" title="The Info/Debug events of Release version.">
       <a class="nav-link" id="{{eventTabLabeledBy}}" data-toggle="tab" href="#ignored" role="tab" aria-controls="ignored" aria-selected="false">Ignored</a>
     </li>
-    <li class="nav-item" (click)="onClickLogEventTab('all')">
+    <li class="nav-item" (click)="onClickLogEventTab('all')" data-toggle="tooltip" title="All events of Baseline and Release versions.">
       <a class="nav-link" id="{{eventTabLabeledBy}}" data-toggle="tab" href="#all" role="tab" aria-controls="all" aria-selected="false">All</a>
     </li>
   </ul>
@@ -106,14 +106,16 @@
             <!-- <div class="error_graph"><img src="../../../assets/images/graph_lines_01.png" class="img-fluid"
                 alt="graph" /></div> -->
 
-            <div class="dropdown error_dropdown">
-              <select (change)="changeCriticality($event,log)" [(ngModel)]="log.color" class="btn dropdown-toggle pb-0 pl-0 pr-2 pt-0 criticality-select" [ngClass]="{'text-danger':log.color == 'dark red', 'text-error':log.color=='red','text-warning':log.color=='yellow','text-muted':log.color=='green'}"> 
+            <div class="dropdown error_dropdown" >
+              <select (change)="changeCriticality($event,log)" data-toggle="dropdown" [(ngModel)]="log.color" class="btn dropdown-toggle pb-0 pl-0 pr-2 pt-0 criticality-select" [ngClass]="{'text-danger':log.color == 'dark red', 'text-error':log.color=='red','text-warning':log.color=='yellow','text-muted':log.color=='green'}"> 
                 <option *ngFor='let criticality of criticalityList' [value]="criticality.criticalityColor" class="{{criticality.textclass}}">
                   {{criticality.displayValue}}
                 </option>
               </select>
+              <!-- <i class="fa fa-commenting-o" aria-hidden="true" id="criticalityComment" data-toggle="dropdown"></i> -->
+              <i class="fa fa-commenting" aria-hidden="true" id="criticalityComment" data-toggle="dropdown"></i>
               <div class="dropdown-menu px-3 py-2 dropdown-shadow dropdown-reason dropdown-menu-right"
-                aria-labelledby="dropdownMenuButton">
+                aria-labelledby="criticalityComment">
                 <div class="dropdown_header d-flex align-items-center justify-content-between mb-2">
                   <span>Reason for Reclassification</span>
                   <i class="fa text-muted fa-times"></i>
@@ -126,22 +128,24 @@
                   </div>
                   <div class="text-right">
                     <button type="submit" class="btn btn-default">Close</button>
-                    <button type="submit" class="btn  btn-primary">Submit</button>
+                    <button type="submit" class="btn  btn-primary" (click)="saveCriticalityComments()">Submit</button>
                   </div>
                 </div>
               </div>
             </div>
             <div class="dropdown error_dropdown">
-               <select (change)="changeClusterTag($event,log)" class="btn dropdown-toggle pb-0 pl-0 pr-2 pt-0 criticality-select" > 
+               <select (change)="changeClusterTag($event,log)" data-toggle="dropdown" class="btn dropdown-toggle pb-0 pl-0 pr-2 pt-0 criticality-select" > 
                <!-- [ngClass]="{'text-danger':log.color == 'dark red', 'text-error':log.color=='red','text-warning':log.color=='yellow','text-muted':log.color=='green'}" -->
                 <option *ngFor='let tag of clusterTagList' [value]="tag.value" class="{{tag.textclass}}">
                   {{tag.displayValue}}
                 </option>
               </select>
+              <!-- <i class="fa fa-commenting-o" aria-hidden="true" id="clustertagComment" data-toggle="dropdown"></i> -->
+              <i class="fa fa-commenting" aria-hidden="true" id="clustertagComment" data-toggle="dropdown"></i>
               <div class="dropdown-menu px-3 py-2 dropdown-shadow dropdown-reason dropdown-menu-right"
-                aria-labelledby="dropdownMenuButton">
+                aria-labelledby="clustertagComment">
                 <div class="dropdown_header d-flex align-items-center justify-content-between mb-2">
-                  <span>Reason for Reclassification</span>
+                  <span>Logs cluster tag</span>
                   <i class="fa text-muted fa-times"></i>
                 </div>
                 <!-- /.dropdown_header -->
@@ -165,7 +169,7 @@
             </button>
           </div>
 
-          <div id="log{{log.id}}" class="collapse" aria-labelledby="heading01" data-parent="#accordionExample">
+          <div id="log{{log.id}}" class="collapse show" aria-labelledby="heading01" data-parent="#accordionExample">
             <div class="card-body text-wrap-normal">
               <span [outerHTML]="log.combineClust | replaceLineBreaks"></span>
             </div>
@@ -177,6 +181,10 @@
   </div>
 </div>
 
+<div class="bottom_btns mt-auto bg-white position-sticky text-right">
+  <button class="btn mr-2 btn-default">Reset</button>
+  <button class="btn mr-2 btn-default" (click)="rerunLogs()">Re-run</button>
+</div>
 
 <!-- /.col-sm-4 -->
 
